<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Help Desk</string>
    <string name="hello_world">Hello world!!!!!!</string>
    <string name="action_settings">Settings</string>
    <string name="all_users">All Users</string>
    <string name="new_user">Add new user</string>
    <string name="edit_user">Edit user</string>
    <string name="view_all_users">View All Users</string>
    <string name="add_new_users">Add New Users</string>
    <string name="loading_user_list">Loading user list. Please wait...</string>
    <string name="loading_user_details">Loading user details. Please wait...</string>
    <string name="updating_user_details">Updating user details. Please wait...</string>
    <string name="deleting_user">User deleting. Please wait...</string>
    <string name="creating_user">Creating User</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="retype_pass">Retype Password</string>
    <string name="create_user">Create User</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_user">Delete User</string>
    <string name="pass_not_match">Password didn\'t match</string>


    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Add New User</item>
        <item >View All Users</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
    </array>

    <string name="desc_list_item_icon">Item Icon</string>



</resources>
